# grimmoire

./: README.md  Taskfile.yaml  hatdware.md  manifest-der-lernkultur.md  pyproject.toml  zensical.toml
.github/workflows/: deploy.yml
python/beginners/: index.md
python/beginners/de/: 00-manifest.md  01-commands-and-calls.md  02-imports.md  03-argparse.md  04-variables-and-values.md  05-debugger.md  06-conditions.md  07-loops-and-loop-controls.md  08-functions.md  09-classes.md  10-tooling-uv.md  11-create-your-package.md  a__01-setup-uv.md  a__02-setup-python.md  a__03-test-installation.md  index.md
python/beginners/en/: 00-manifest.md  01-commands-and-calls.md  02-imports.md  03-argparse.md  04-variables-and-values.md  05-debugger.md  06-conditions.md  07-loops-and-loop-controls.md  08-functions.md  09-classes.md  10-tooling-uv.md  11-create-your-package.md  a__01-setup-uv.md  a__02-setup-python.md  a__03-test-installation.md  api-reference.md  index.md
python/beginners/snippets/: 01-wald.py  02-random-direction.py  03-enter.py  04-hero.py  05-fix.py  06-direction.py  07-evens.py  08-shout.py  09-location.py  10-rich.py  11-test-leave.py
scripts/: render_snippets.py
